snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210922.132251-3-all.jar.sha1
a20f377e51f79a25ee55968ae6b41246d6da2e11